--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -880,19 +880,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FZD-5T-4nS">
-                                <rect key="frame" x="0.0" y="64" width="320" height="36"/>
+                                <rect key="frame" x="0.0" y="64" width="480" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gl-0p-IDe">
-                                <rect key="frame" x="0.0" y="108" width="320" height="31.5"/>
+                                <rect key="frame" x="0.0" y="108" width="480" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LWs-8C-KuC">
-                                <rect key="frame" x="144" y="430" width="32" height="30"/>
+                                <rect key="frame" x="224" y="270" width="32" height="30"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="studentLectureNextAction:" destination="FFr-B7-ubx" eventType="touchUpInside" id="a7m-p4-QbB"/>
@@ -926,6 +926,23 @@
                                 <exclude reference="WeE-Qe-lti"/>
                                 <exclude reference="qhH-xr-UNC"/>
                                 <exclude reference="DcB-ha-Xuu"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="FZD-5T-4nS"/>
+                                <include reference="7gl-0p-IDe"/>
+                                <include reference="LWs-8C-KuC"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="Uop-k5-Ods"/>
+                                <include reference="6nL-nE-AYK"/>
+                                <include reference="B0G-Zu-pf1"/>
+                                <include reference="rtJ-df-HCr"/>
+                                <include reference="WUC-n6-GjU"/>
+                                <include reference="WeE-Qe-lti"/>
+                                <include reference="qhH-xr-UNC"/>
+                                <include reference="DcB-ha-Xuu"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=regular">
